@@ -12,7 +12,11 @@ no_categories_for_chooser "No Sites are defined.  You must add a Site before you
 <Module "Krang::CGI::Story">
   duplicate_url "Duplicate URL detected.  Story ID $story_id has the URL $url which is the same as your choices generate.  Please change your settings for $which to generate a new URL."
 
-  duplicate_url_on_category_add "Duplicate URL detected.  Adding the category $category would cause a conflict with story ID $story_id, which already has the URL $url."
+  duplicate_url_on_add_category "Duplicate URL detected. Adding the category $category would cause a conflict with story ID $story_id, which already has the URL $url."
+
+  category_has_url "Duplicate URL detected. Category ID $category_id has the URL $url which is the same as your choices generate.  Please change your settings for $which to generate a new URL."
+
+  category_has_url_on_add_category "Duplicate URL detected. Adding the category $category would cause a conflict with Category ID $category_id, which already has the URL $url."
 
   bad_slug "You have entered an invalid slug.  The slug may contain only letters, numbers, underscores and hyphens."
 
@@ -281,7 +285,8 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
   missing_parent_id              "Parent requires a value."
   missing_dir                    "Directory requires a value."
   bad_dir                        "Directory name must contain only letters, numbers, underscores and dashes.  No spaces or other special characters are allowed."
-  duplicate_url "Duplicate URL detected.  An existing category has the URL $url which is the same as your choices generate.  Please change your settings for parent or directory to generate a new URL."
+  duplicate_url "Duplicate URL detected.  Category ID $category_id has the URL $url which is the same as your choices generate.  Please change your settings for parent or directory to generate a new URL."
+  story_has_url "Duplicate URL detected.  Story ID $story_id has the URL $url which is the same as your choices generate.  Please change your settings for parent or directory to generate a new URL."
 
   add_not_allowed "Cannot add category.  You do not have access to edit parent category '$url'."
 
