@@ -18,7 +18,7 @@ use File::Spec::Functions qw(catdir canonpath);
 
 # setup exceptions
 use Exception::Class 
-  'Krang::Story::DuplicateURL'         => { fields => [ 'story_id'    ] },
+  'Krang::Story::DuplicateURL'         => { fields => [ 'story_id', 'category_id' ] },
   'Krang::Story::MissingCategory'      => { fields => [               ] },
   'Krang::Story::NoCategoryEditAccess' => { fields => [ 'category_id' ] },
   'Krang::Story::NoEditAccess'         => { fields => [ 'story_id'    ] },
@@ -478,7 +478,9 @@ required.  After this call the object is guaranteed to be in a valid
 state and may be saved immediately with C<save()>.
 
 Will throw a Krang::Story::DuplicateURL exception with a story_id
-field if saving this story would conflict with an existing story.
+or category_id field if saving this story would conflict with an 
+existing story or category.
+
 
 =cut
 
@@ -614,7 +616,8 @@ changes).  Increments the version number unless called with
 'keep_version' set to 1.
 
 Will throw a Krang::Story::DuplicateURL exception with a story_id
-field if saving this story would conflict with an existing story.
+field if saving this story would conflict with an existing story
+or category.
 
 Will throw a Krang::Story::MissingCategory exception if this story
 doesn't have at least one category.  This can happen when a clone()
@@ -650,7 +653,7 @@ sub save {
        category_id => $self->category->category_id)
         unless ($self->category->may_edit);
     
-    # make sure it's got a unique URI
+    # make sure it's got a unique URL
     $self->_verify_unique();
 
     # update the version number
@@ -796,7 +799,7 @@ sub _verify_unique {
     my $self   = shift;
     my $dbh    = dbh;
 
-    # lookup dup
+    # first look for a story with the same URL
     my @urls  = $self->urls;
     return unless @urls;
 
@@ -806,12 +809,20 @@ sub _verify_unique {
     my ($dup_id) = $dbh->selectrow_array($query, undef, $self->urls, 
                                          ($self->{story_id} ? 
                                           ($self->{story_id}) : ()));
-
     # throw exception on dup
     Krang::Story::DuplicateURL->throw(message => "duplicate URL",
                                       story_id => $dup_id)
         if $dup_id;
-
+    
+    # then - unless we're a category index - make sure no category has our URL!
+    if ($self->{slug}) {
+	$query = 'SELECT category_id FROM category WHERE ('.
+	    join(' OR ', ('url = ?') x @urls) . ')';
+	($dup_id) = $dbh->selectrow_array($query, undef, map { $_.'/' } $self->urls);
+	Krang::Story::DuplicateURL->throw(message => "category has our URL",
+					  category_id => $dup_id)
+	    if $dup_id;
+    }
 }
 
 =item C<< @stories = Krang::Story->find(title => "Turtle Soup") >>
